--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
         .content{
           padding:30px;
         }
-        .logos{
+        .logo{
           color:cyan;
           font-size:30px;
-          padding:20px;
+          position:fixed;
+          bottom:0px;
+          right:20px;
+        }
+        .logos{
+          padding-left:20px;
+
         }
     </style>
     <img src="assets/logo.png">
@@ -48,7 +54,7 @@
     </div>
 
 
-    <footer style="text-align:right;">
+    <footer class="logo">
         <ion-icon name="logo-facebook" class="logos"></ion-icon>
         <ion-icon name="logo-github"class="logos"></ion-icon>
         <ion-icon name="location-outline"class="logos"></ion-icon>
